--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
  #myOverlay1 {
 width:600px;
 height:400px;
+     
+     background-size: cover;
+     margin-top: -21px;
  }
  #myOverlay2 {
     width:50%;
