--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,22 @@ height:400px;
  #myOverlay3 {
                 
     }
+.overlay-top-hdr{
+    height: 50px;
+    background: #C0403F;
+    width: 100%;
+}
+.overlay-site-name{
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-weight: 100;
+    padding-top: 20px;
+}
+.overlay-site-name-right{
+      text-transform: uppercase;
+    font-family: sans-serif;
+    font-weight: 100;
+    padding-top: 20px;
+    margin-right: 20px;
+   
+}
