--- a/css/main.css
+++ b/css/main.css
@@ -31,3 +31,13 @@ height:400px;
     margin-right: 20px;
    
 }
+.overlay-top-body{
+height: 300px;
+    width: 100%;
+    background: red;
+}
+.overlay-top-foot{
+height: 54px;
+    width: 100%;
+    background: #C0403F;
+}
