changes to date picker style

--- a/css/main.css
+++ b/css/main.css
@@ -45,3 +45,8 @@ height: 54px;
     width: 100%;
     background: #C0403F;
 }
+.overlay-top-body-2{
+height: auto;
+    width: 100%;
+   background: #332F2D; 
+}
