--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,16 @@ height:400px;
  }
  #myOverlay2 {
     width:50%;
-    height:50%;
+    height:0%;
      }
  #myOverlay3 {
                 
     }
+ #myOverlay4 {
+    width:50%;
+    height:0%;
+     background: #967212;
+     }
 .overlay-top-hdr{
     height: 50px;
     background: #C0403F;
@@ -49,4 +54,26 @@ height: 54px;
 height: auto;
     width: 100%;
    background: #332F2D; 
+}
+.body-sec-full{
+height: 100px;
+}
+.gallery-resort {
+    height: 100px;
+    
+}
+.compare-Hotels{
+    background:#967212;
+    height: 200px;
+    width: 14.28%;
+    float: left;
+    border: 1px solid white;
+    text-align: center;
+    overflow: hidden;
+    font-size: 10px;
+    
+}
+            
+ul.hotels {
+  list-style-type:square;
 }
