--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,9 @@ height:400px;
                 
     }
  #myOverlay4 {
-    width:50%;
+    width:60%;
     height:0%;
-     background: #967212;
+   
      }
 .overlay-top-hdr{
     height: 50px;
@@ -64,7 +64,7 @@ height: 100px;
 }
 .compare-Hotels{
    
-    height: 200px;
+    height: 250px;
     width: 14.28%;
     float: left;
     border: 1px solid white;
@@ -72,6 +72,11 @@ height: 100px;
     overflow: hidden;
     font-size: 10px;
     
+}
+.overlay-top-comp{
+height: 250px;
+    width: 100%;
+   
 }
             
 ul.hotels {
