--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,56 @@ height:400px;
      background-size: cover;
      margin-top: -21px;
  }
+#myOverlay6 {
+width:600px;
+height:400px;
+     
+     background-size: cover;
+     margin-top: -21px;
+ }
+
+#myOverlay7 {
+width:600px;
+height:400px;
+     
+     background-size: cover;
+     margin-top: -21px;
+ }
+#myOverlay8 {
+width:600px;
+height:400px;
+     
+     background-size: cover;
+     margin-top: -21px;
+ }
+#myOverlay9 {
+width:600px;
+height:400px;
+     
+     background-size: cover;
+     margin-top: -21px;
+ }
+#myOverlay10 {
+width:600px;
+height:400px;
+     
+     background-size: cover;
+     margin-top: -21px;
+ }
+#myOverlay11 {
+width:600px;
+height:400px;
+     
+     background-size: cover;
+     margin-top: -21px;
+ }
+
+
+
+
+
+
+
 
  #myOverlay2 {
     width:50%;
