--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,9 @@ height: 300px;
     border: 0.5px solid red;
 }
 .book-btn{
-width: 100px;
+margin-left: -10px;
+width: 150px;
     height: 50px;
-    background: red;
+    background: #C0403F;
+   
 }
