--- a/css/main.css
+++ b/css/main.css
@@ -186,3 +186,29 @@ width: 110%;
 .cst-links:hover{
     text-decoration: underline 2px solid aqua;
 }
+.text{ width:260px;
+    height:200px; 
+    background:#FFF; 
+    opacity:0; 
+   margin-top: 20px;
+} 
+.product-listing:hover .text
+{ 
+    opacity:0.6; text-align:justify; 
+    color:#000000; 
+    font-size:20px; font-weight:700;
+    font-family:"Times New Roman", Times, serif; padding:30px; 
+}
+.btn-choose{
+margin-left: -10px;
+width: 110%;
+    height: 50px;
+    background: #C0403F;
+    padding-top: 10px;
+    text-align: center;
+    color: white;
+   
+}
+.btn-choose:hover{
+    cursor: pointer;
+}
