--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ height: auto;
    background: #332F2D; 
 }
 .body-sec-full{
-height: 100px;
+height: 650px;
 }
 .gallery-resort {
     height: 100px;
@@ -186,7 +186,7 @@ width: 110%;
 .cst-links:hover{
     text-decoration: underline 2px solid aqua;
 }
-.text{ width:260px;
+.text{ width:200px;
     height:200px; 
     background:#FFF; 
     opacity:0; 
@@ -199,6 +199,22 @@ width: 110%;
     font-size:20px; font-weight:700;
     font-family:"Times New Roman", Times, serif; padding:30px; 
 }
+
+.text-b{ 
+    width:260px;
+    height:200px; 
+    background:#FFF; 
+    opacity:0; 
+   margin-top: 20px;
+} 
+.product-listing:hover .text-b
+{ 
+    opacity:0.6; text-align:justify; 
+    color:#000000; 
+    font-size:20px; font-weight:700;
+    font-family:"Times New Roman", Times, serif; padding:30px; 
+}
+
 .btn-choose{
 margin-left: -10px;
 width: 110%;
@@ -211,4 +227,13 @@ width: 110%;
 }
 .btn-choose:hover{
     cursor: pointer;
+}
+.footer-end{
+height: 50px;
+    background: #000;
+    width: 100%
+}
+.copyright{
+color: white;
+    text-transform: uppercase;
 }
