--- a/css/main.css
+++ b/css/main.css
@@ -237,3 +237,10 @@ height: 50px;
 color: white;
     text-transform: uppercase;
 }
+.header-ind{
+background: url(../img/logo-west.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 695px;
+}
