--- a/css/main.css
+++ b/css/main.css
@@ -244,3 +244,10 @@ background: url(../img/logo-west.jpg);
     width: 100%;
     height: 695px;
 }
+.logo{
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    width: 200px
+    height: 200px;
+}
