--- a/css/main.css
+++ b/css/main.css
@@ -252,3 +252,11 @@ background: url(../img/logo-west.jpg);
     margin-top: 20px;
     float: left;
 }
+.covered{
+    cursor: not-allowed;
+  -webkit-filter: brightness(70%);
+-moz-filter: brightness(70%);
+-o-filter: brightness(70%);
+-ms-filter: brightness(70%);
+    
+}
